# feecc-validator-backend

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: Deploy-master-DO.yml
src/: _db_utils.py  _logging.py  app.py  database.py  ipfs_certidicate_parser.py  key_types.py  models.py
